--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,11 +16,11 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
