--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "akino-socket-chat-server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "nodemon",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.16.3",
-        "socket.io": "^2.1.1"
-    },
-    "devDependencies": {
-        "eslint": "^5.1.0"
-    }
+  "name": "akino-socket-chat-server",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "hbs": "~4.0.1",
+    "http-errors": "~1.6.2",
+    "mongoose": "^5.2.3",
+    "morgan": "~1.9.0",
+    "socket.io": "^2.1.1"
+  }
 }
