--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
+    "bcrypt-promise": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.3",
     "morgan": "~1.9.0",
+    "parse-error": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.1.1"
   }
 }
